k8s-snippets.yml
---
# -----------------------------------------
# -----------------------------------------
#
# k config set-context --current --namespace ns_name
# k config
#
# create a debug container within the pod
# k debug my_pod --image alpine -it
#
# k top
# k top nodes
# k top node node_name
# k top pods -A
# k top pod my_pod
#
# print all environment variables of a pod. specify container with -c
# k exec <pod_name> -- env
#
# k cp <file-spec-src> <file-spec-dest>
#
# k endpoints
#
# restart latest deployment. causgin restart of all pods in the deployment
# k rollout restart deployment deployment_name -n namespace

# rollback a deployment

# -c or --container  --> container name is optional. exec against the first container if not present
# exec on deployments or services gets the first pod in the respective selector
# k exec --stdin --tty pods/pod_name --container container_name -n namespace -- command
# k exec -it pods/pod_name -c container_name -n namespace -- /bin/sh
#
#
# k api-resources # list all api resource types in the cluster
# k api-resources --namespaced # list only namespaced resource types
# k api-resources --namespaced=false # only non namespaced (cluster wide) resources
#
# k explain resource_name[.fieldname]
# recursively include nested resource. cap recursion limit with max-depth. 0 means no limit which is the default
# k explain resource_name --recursive --max-depth 0

## logs
# k logs \
#  {pod_name} \ # get logs for a single pod
#  deployment/{deployment_name} \ # get logs for all pods in a deployment
#  --all-containers \
#  --all-pods \ # implies --prefix
#  -c --container {container_name} \
#  --prefix \ # prefix each line with pod and container names
#  --since=1h \ # show logs from 1 hour ago
#  --since-time=YYYY-mm-ddT \
#  --timestamps
#  -l --selector {selector}
#  -f --follow
#  --tail=20 # show latest 20 log lines. -1 (default) for all lines
#  --ignore-errors
#
# flux cd
# ---------
# # manually reconcile a specific kustomization
# flux reconcile kustomization my_kustomization --with-source
# -----------------------------------------
# -----------------------------------------
---
# network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ___
  namespace: ___  # namespace for which this network policy is gonna be applied on its pods
spec:
  podSelector:
    matchLabels:
  policyTypes:  # choose policy type to be Ingress only, Egress only or both
    - Ingress
    - Egress
  Ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/32
        - namespaceSelector:
            matchLabels:
            matchExpression:
        - podSelector:
            matchLabels:
            matchExpression:
  Egress:
    - to:
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ___
  labels:
    app.kubernetes.io/name: ___
    app: ___
spec:
  replicas: 2
  revisionHistoryLimit: 10
  minReadySeconds: 30
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: ___
      app.kubernetes.io/name: ___
  template:
    metadata:
      labels:
        app: ___
        app.kubernetes.io/name: ___
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: ___
      containers:
        - name: ___
          image: nginx:1.29.7-alpine-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: app
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/health
              port: app
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1024Mi
              cpu: 1000m

---
# service
apiVersion: v1

---
# daemon-set
apiVersion: v1
kind: DaemonSet
metadata:
spec:
  selector:
    matchLabels:
      name: ___
  template:
    metadata:
      labels:
        name: ___
    spec:
      tolerations:
      containers:

---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ___
  labels:

---
# persistent-volume

---
# persistent-volume-claim

---
# cluster-role

---
# cluster-role-binding
